# Diary

./: .env.example  .gitignore  pyproject.toml
config/: settings.py
