[tool.poetry]
name = "diary"
version = "0.1.0"
description = ""
authors = ["NazKar@Nazir <karimov.nazir00@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.1.0"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
